fix the issue that story_pane can't be overlapped by the top bar during scrolling

--- a/css/layout.css
+++ b/css/layout.css
@@ -101,7 +101,6 @@ z-index:10000;
 float:left;
 }
 .right_half{
-position:relative;
 padding-top: 48px;
 padding-bottom: 45px;
 float:right;
@@ -193,7 +192,7 @@ margin-left:70px;
 
 /* weibo part*/
 #source_pane{position:fixed; top:70px; width:390px; height:800px; }
-#story_pane{position:relative; margin-left:20px; width:510px; min-height: 744px;}
+#story_pane{width:510px; min-height: 744px;}
 #source_list{height:665px; overflow:auto; padding:0; margin:0; border: 1px solid #C9C9C9; border-top: none; border-radius:5px 5px 5px 5px;}
 #story_list{position: inherit; margin:0; min-height:593px; border: 1px solid #C9C9C9; height:auto; overflow:hidden; list-style: none outside none;}
 #story {}
@@ -359,7 +358,6 @@ height:16px;
  margin:0;
  width:98px;
  height:98px;
-position:relative;
 overflow:hidden;
 background: none repeat scroll 0 0 #FFFFFF;
     border: 1px solid #CCCCCC;
@@ -377,7 +375,6 @@ background: none repeat scroll 0 0 #FFFFFF;
     display: block;
     max-height: 90px;
     padding: 4px;
-    position: absolute;
 }
  
  #story_pic ul
